--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
+    "run": "^1.5.0",
     "sass": "^1.76.0"
   },
   "devDependencies": {
