--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-loading-indicator": "^1.0.2",
+    "react-loading-indicators": "^0.2.3",
     "react-router-dom": "^6.23.0",
-    "sass": "^1.76.0"
+    "react-toastify": "^10.0.5",
+    "sass": "^1.76.0",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
